--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 </div>
 <div class="fragment fade-up">
 <div class="fragment semi-fade-out">
-<p>¿Cómo es nuestra herencia reflajada en nuestro habla?</p>
+<p>¿Cómo reflejamos nuestras comunidades en nuestras formas de hablar?</p>
 </div>
 </div>
 <div class="fragment fade-up">
@@ -306,6 +306,31 @@
 <center>
 Las <span class="emph">creencias</span> sobre la lengua típicamente reflejan creencias <span class="emph">sobre personas</span>, no lenguaje.
 </center>
+</section></section>
+<section>
+<section id="nuestras-comunidades-y-formas-de-hablar" class="title-slide slide level1 center">
+<h1>Nuestras comunidades y formas de hablar</h1>
+
+</section>
+<section id="a-qué-comunidades-pertenecemos" class="slide level2">
+<h2>¿A qué comunidades pertenecemos?</h2>
+<ol start="16" type="a">
+<li>ej.:</li>
+</ol>
+<ul>
+<li>nacionalidad</li>
+<li>religión</li>
+<li>una clase de lengua</li>
+<li>trabajador</li>
+<li>sexualidad</li>
+<li>género</li>
+<li>…?</li>
+</ul>
+</section>
+<section id="a-qué-comunidades-pertenecemos-1" class="slide level2">
+<h2>¿A qué comunidades pertenecemos?</h2>
+<p>¿Hablas de un cierto modo por ser parte de una comunidad?</p>
+<p>P. ej.: - los méxicanos pueden <span class="emph">pronunciar</span> ‘tl’ como en la palabra ‘tlacote’, mientras que otras variedades tienen dificuldades a pronunciarla - trabajas en una fábrica y conoces muchas <span class="emph">palabras especializadas</span> - los españoles parecen <span class="emph">maleducados</span> - ¿por qué será?</p>
 </section></section>
 <section>
 <section id="hablantes-de-herencia" class="title-slide slide level1 transition center">
