--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Las <span class="emph">creencias</span> sobre la lengua típicamente reflejan cr
 <section id="a-qué-comunidades-pertenecemos" class="slide level2">
 <h2>¿A qué comunidades pertenecemos?</h2>
 <ol start="16" type="a">
-<li>ej.:</li>
+<li>ej.</li>
 </ol>
 <ul>
 <li>nacionalidad</li>
@@ -330,7 +330,17 @@ Las <span class="emph">creencias</span> sobre la lengua típicamente reflejan cr
 <section id="a-qué-comunidades-pertenecemos-1" class="slide level2">
 <h2>¿A qué comunidades pertenecemos?</h2>
 <p>¿Hablas de un cierto modo por ser parte de una comunidad?</p>
-<p>P. ej.: - los méxicanos pueden <span class="emph">pronunciar</span> ‘tl’ como en la palabra ‘tlacote’, mientras que otras variedades tienen dificuldades a pronunciarla - trabajas en una fábrica y conoces muchas <span class="emph">palabras especializadas</span> - los españoles parecen <span class="emph">maleducados</span> - ¿por qué será?</p>
+<ol start="16" type="a">
+<li>ej.</li>
+</ol>
+<ul>
+<li>los méxicanos pueden <span class="emph">pronunciar</span> ‘tl’ como en la palabra ‘tlacote’, mientras que otras variedades tienen dificuldades a pronunciarla</li>
+<li>trabajas en una fábrica y conoces muchas <span class="emph">palabras especializadas</span></li>
+<li>los españoles parecen <span class="emph">maleducados</span>
+<ul>
+<li>¿por qué será?</li>
+</ul></li>
+</ul>
 </section></section>
 <section>
 <section id="hablantes-de-herencia" class="title-slide slide level1 transition center">
